--- a/artistic-works.html
+++ b/artistic-works.html
@@ -66,6 +66,7 @@
       justify-content: space-between;
       gap: 16px;
     }
+    
 
     .brand{
       font-family:"Bebas Kai", system-ui, sans-serif;
@@ -152,7 +153,11 @@
   gap: 60px;                  /* espaço entre texto e imagem */
   align-items: flex-start;
 }
-
+.container {
+  max-width: 1120px;   /* mesmo max-width do header */
+  margin: 0 auto;      /* centraliza horizontalmente */
+  padding: 0 22px;     /* mesmo padding lateral do header */
+}
 
 }
 
@@ -301,7 +306,7 @@ flex: 0 0 55%;      /* texto ocupa 55% */
       Portugal| Spain</p>
 
       <p><strong></strong> | Archive | Color</p>
-    </div>
+     </div>
 
     <div class="project-block">
       <p><strong>Con el apoyo de</strong></p>
