--- a/artistic-works.html
+++ b/artistic-works.html
@@ -11,7 +11,6 @@
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap" rel="stylesheet" />
-</head>
 
   <style>
     :root{
@@ -66,14 +65,13 @@
       justify-content: space-between;
       gap: 16px;
     }
-    
 
     .brand{
       font-family:"Bebas Kai", system-ui, sans-serif;
       letter-spacing:.18em;
       white-space: nowrap;
-      color: var(--muted);        /* 👈 fixa a cor */
-      text-decoration: none;     /* 👈 remove sublinhado */
+      color: var(--muted);
+      text-decoration: none;
       opacity: .9;
     }
 
@@ -89,7 +87,6 @@
 
     .menu a{
       text-decoration:none;
-      color: var(--muted);
       color: inherit;
       opacity:.9;
       white-space: nowrap;
@@ -98,14 +95,14 @@
     .menu a:hover{ opacity:1; color: var(--text); }
 
     main{ padding-top: var(--hdr-h); }
-    /* Dropdowns */
+
     .dropdown {
       position: relative;
     }
 
     .dropdown > a::after {
       content: " ▾";
-      font-size: 0.7em; /* seta mais discreta */
+      font-size: 0.7em;
     }
 
     .dropdown-content {
@@ -140,122 +137,122 @@
       display: block;
     }
 
-/* ===============================
-   PROJECT — EDITORIAL LAYOUT
-   Alinhado com Artistic Works
-================================ */
+    /* =============================== PROJECT — EDITORIAL LAYOUT ================= */
+    .container {
+      max-width: 1120px;
+      margin: 0 auto;
+      padding: 0 22px;
+    }
 
-/* CONTAINER */
-.project-layout{
-  background:#0a0c11;
-  padding: 0px 10px 140px;
-  display: flex;              /* 👈 FALTA ISTO */
-  gap: 60px;                  /* espaço entre texto e imagem */
-  align-items: flex-start;
-}
-.container {
-  max-width: 1120px;   /* mesmo max-width do header */
-  margin: 0 auto;      /* centraliza horizontalmente */
-  padding: 0 22px;     /* mesmo padding lateral do header */
-}
+    .project-layout {
+      background:#0a0c11;
+      padding: 90px 0 140px;  /* remove padding lateral */
+    }
 
-}
+    .project-wrapper {
+      display: flex;
+      gap: 60px;
+      align-items: flex-start;
+    }
 
-/* TEXTO */
-.project-text{
-  font-family:"Source Serif 4", serif;
-  color: var(--text);
-  font-size: 13.6px;
-  line-height: 1.62;
-  letter-spacing: .015em;
-  color: var(--ink);
-  display: flex;
-  flex-direction: column;
-  max-width: 920px;   /* mesmo max-width do hero */
-  margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
-  align-items: flex-start;
-  justify-content: flex-start; /* vertical: ao topo */
-flex: 0 0 55%;      /* texto ocupa 55% */
-  margin: 0;
-}
+    .project-text{
+      font-family:"Source Serif 4", serif;
+      color: var(--text);
+      font-size: 13.6px;
+      line-height: 1.62;
+      letter-spacing: .015em;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex: 0 0 55%;
+      margin: 0;
+    }
 
-/* TÍTULO */
-.project-header h1{
-  font-size: 13.8px;
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: .08em;
-  margin-bottom: 18px;
-  display: flex-end;
-}
+    .project-header h1{
+      font-size: 13.8px;
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: .08em;
+      margin-bottom: 18px;
+      display: flex-end;
+    }
 
-.project-header h1 span{
-  display: flex;
-  align-items: flex-end;
-  margin-top: 6px;
-  font-style: italic;
-  font-weight: 400;
-  letter-spacing: .02em;
-  text-transform: none;
-  color: var(--muted);
+    .project-header h1 span{
+      display: flex;
+      align-items: flex-end;
+      margin-top: 6px;
+      font-style: italic;
+      font-weight: 400;
+      letter-spacing: .02em;
+      text-transform: none;
+      color: var(--muted);
+    }
 
-}
+    .project-meta{
+      display: grid;
+      gap: 3px;
+      font-size: 12.4px;
+      letter-spacing: .04em;
+      color: var(--accent);
+      margin-bottom: 44px;
+    }
 
-/* META */
-.project-meta{
-  display: grid;
-  gap: 3px;
-  font-size: 12.4px;
-  letter-spacing: .04em;
-  color: var(--accent);
-  margin-bottom: 44px;
-}
+    .project-meta .year{
+      margin-top: 12px;
+    }
 
-.project-meta .year{
-  margin-top: 12px;
-}
+    .project-block{
+      margin-bottom: 30px;
+    }
 
-/* BLOCOS */
-.project-block{
-  margin-bottom: 30px;
-}
+    .project-block strong{
+      display: block;
+      font-weight: 500;
+      letter-spacing: .05em;
+      text-transform: uppercase;
+      font-size: 11.2px;
+      margin-bottom: 6px;
+      color: var(--muted);
+    }
 
-.project-block strong{
-  display: block;
-  font-weight: 500;
-  letter-spacing: .05em;
-  text-transform: uppercase;
-  font-size: 11.2px;
-  margin-bottom: 6px;
-  color: var(--muted);
-}
+    .synopsis{
+      margin-top: 64px;
+    }
 
-/* SINOPSE */
-.synopsis{
-  margin-top: 64px;
-}
+    .synopsis p{
+      max-width: 34ch;
+    }
 
-.synopsis p{
-  max-width: 34ch;
-}
+    .project-image{
+      flex: 0 0 45%;
+    }
 
-/* IMAGEM */
-.project-image img{
-  width: 100%;
-  height: auto;
-  display: block;
-  flex: 0 0 45%;
-}
+    .project-image img{
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    @media (max-width:900px){
+      .project-wrapper{
+        flex-direction: column;
+        gap:48px;
+      }
+
+      .project-text,
+      .project-image{
+        flex:1 1 100%;
+      }
+    }
   </style>
 </head>
 <body>
  <header>
-      <nav>
-        <!-- clica no nome para ir ao Home -->
+      <nav class="container">
         <a href="index.html" class="brand">MARIANA TORRES</a>
 
         <ul class="menu">
-          <!-- removemos "Home" aqui, como combinámos -->
           <li><a href="about.html">About</a></li>
 
           <li class="dropdown">
@@ -280,77 +277,78 @@ flex: 0 0 55%;      /* texto ocupa 55% */
 
   <main>
 <section class="project-layout">
+  <div class="project-wrapper container">
 
-  <!-- COLUNA TEXTO -->
-  <div class="project-text">
+    <!-- COLUNA TEXTO -->
+    <div class="project-text">
+      <div class="project-header">
+        <h1>
+          Send me a color
+          <span>Mechanical Gestures to Preserve Flowers:<br>
+                An essay on color reproduction using contact duplication systems</span>
+        </h1>
 
-    <div class="project-header">
-      <h1>
-        Send me a color
-        <span>Mechanical Gestures to Preserve Flowers:<br>
-              An essay on color reproduction using contact duplication systems</span>
-      </h1>
-
-      <div class="project-meta">
-        <span>Film performance| research project</span>
-        <span>16mm film | 12min</span>
-        <span class="year">2024</span>
+        <div class="project-meta">
+          <span>Film performance| research project</span>
+          <span>16mm film | 12min</span>
+          <span class="year">2024</span>
+        </div>
       </div>
+
+      <div class="project-block">
+        <p><strong>Director</strong><br>
+        Mariana Torres</p>
+
+        <p><strong>Países de producción</strong><br>
+        Portugal| Spain</p>
+
+        <p><strong></strong> | Archive | Color</p>
+       </div>
+
+      <div class="project-block">
+        <p><strong>Con el apoyo de</strong></p>
+        <p>
+          Elías Querejeta Zine Eskola (País Vasco)<br>
+          2Deo laboratorio centro cultural Tabakalera (País Vasco)<br>
+          Casa Estrela Association (Portugal)<br>
+        </p>
+      </div>
+
+      <div class="project-block">
+        <p><strong>C</strong></p>
+        <p>
+          Production: Elias Querjeta Zine Eskola<br>
+          Cinematographer: Helena Estrela<br>
+          development and duplication: Mariana Torres<br>
+          Sound Design: Catalina Giordani & Veronica Boggio<br>
+          Projectionists: Lorena Garcia | Matias Fajn | Inés Vasquez<br>
+
+          Photoquimical Laboratory: Elias Querjeta Zine Eskola <br>
+        </p>
+      </div>
+
+      <div class="project-block synopsis">
+        <p><strong>Sinopsis</strong></p>
+        <p>
+          <em>It is a filmic performance that explores the mechanical 
+            gestures of 16mm projectors to reveal light as a material origin
+           and color as an empirical exploration of vision, through a process
+           of duplication in analog film that employs an old color technique
+           from 1861 by Marxwell, called the chromatic separation technique.
+           On the screen, thousands of chromatic possibilities unfold through filters
+           and crystals, exploring the refraction and reflection of light in delicate 
+          flashes of melancholy. The images are flowers, where color generates new flowers,
+         and where color itself acquires movement and will.
+        </p>
+      </div>
+
     </div>
 
-    <div class="project-block">
-      <p><strong>Director</strong><br>
-      Mariana Torres</p>
-
-      <p><strong>Países de producción</strong><br>
-      Portugal| Spain</p>
-
-      <p><strong></strong> | Archive | Color</p>
-     </div>
-
-    <div class="project-block">
-      <p><strong>Con el apoyo de</strong></p>
-      <p>
-        Elías Querejeta Zine Eskola (País Vasco)<br>
-        2Deo laboratorio centro cultural Tabakalera (País Vasco)<br>
-        Casa Estrela Association (Portugal)<br>
-      </p>
+    <!-- COLUNA IMAGEM -->
+    <div class="project-image">
+      <img src="img/projeto.jpg" alt="">
     </div>
 
-    <div class="project-block">
-      <p><strong>C</strong></p>
-      <p>
-        Production: Elias Querjeta Zine Eskola<br>
-        Cinematographer: Helena Estrela<br>
-        development and duplication: Mariana Torres<br>
-        Sound Design: Catalina Giordani & Veronica Boggio<br>
-        Projectionists: Lorena Garcia | Matias Fajn | Inés Vasquez<br>
-
-        Photoquimical Laboratory: Elias Querjeta Zine Eskola <br>
-        
-      </p>
-    </div>
-
-    <div class="project-block synopsis">
-      <p><strong>Sinopsis</strong></p>
-      <p>
-        <em>It is a filmic performance that explores the mechanical 
-          gestures of 16mm projectors to reveal light as a material origin
-         and color as an empirical exploration of vision, through a process
-         of duplication in analog film that employs an old color technique
-         from 1861 by Marxwell, called the chromatic separation technique.
-         On the screen, thousands of chromatic possibilities unfold through filters
-         and crystals, exploring the refraction and reflection of light in delicate 
-        flashes of melancholy. The images are flowers, where color generates new flowers,
-       and where color itself acquires movement and will.
-      </p>
-    </div>
-
-  </div>
-
-  <!-- COLUNA IMAGEM -->
-  <div class="project-image">
-    <img src="img/projeto.jpg" alt="">
   </div>
 </section>
 </main>
