--- a/research-preservation.html
+++ b/research-preservation.html
@@ -15,16 +15,17 @@
       --text-main: #f5f5f5;
       --text-muted: #a6a9b5;
       --accent: #78d3ff;
-      --max-width: 1100px;
+      --max-width: 1120px;
+      --hdr-h: 64px;
     }
 
+    *{ box-sizing:border-box; }
     body {
       margin: 0;
       padding: 0;
       background: #050608;
       color: var(--text-main);
       font-family: "Source Serif 4", serif;
-      -webkit-font-smoothing: antialiased;
     }
 
     header, main{ position: relative; z-index: 1; }
@@ -39,8 +40,9 @@
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
     }
+
     nav{
-      max-width: var(--max);
+      max-width: var(--max-width);
       margin:0 auto;
       height:100%;
       padding:0 22px;
@@ -49,108 +51,60 @@
       justify-content: space-between;
       gap: 16px;
     }
-  .brand{
-  font-family:"Bebas Kai", system-ui, sans-serif;
-  letter-spacing:.18em;
-  white-space: nowrap;
 
-  color: var(--muted);        /* 👈 fixa a cor */
-  text-decoration: none;     /* 👈 remove sublinhado */
-  opacity: .9;
-}
+    .brand{
+      font-family:"Bebas Kai", system-ui, sans-serif;
+      letter-spacing:.18em;
+      white-space: nowrap;
+      color: var(--text-muted);
+      text-decoration: none;
+      opacity: .9;
+    }
 
-.brand:hover{
-  color: var(--text);        /* igual ao menu */
-  opacity: 1;
-}
+    .brand:hover{ color: var(--text-main); opacity:1; }
 
     .menu{
       list-style:none;
-      color: var(--muted);
       display:flex;
       gap: 14px;
       margin:0;
       padding:0;
       font-size:.94rem;
-      color: var(--muted);
+      color: var(--text-muted);
     }
+
     .menu a{
       text-decoration:none;
       color: inherit;
       opacity:.9;
       white-space: nowrap;
     }
-    .menu a:hover{ opacity:1; color: var(--text); }
+    .menu a:hover{ opacity:1; color: var(--text-main); }
 
     main{ padding-top: var(--hdr-h); }
-    /* Dropdowns */
-    .dropdown {
-      position: relative;
-    }
-
-    .dropdown > a::after {
-      content: " ▾";
-      font-size: 0.7em; /* seta mais discreta */
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      top: 26px;
-      left: 0;
-      min-width: 220px;
-      background: rgba(5, 6, 8, 0.97);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 10px 0;
-      list-style: none;
-      z-index: 999;
-    }
-
-    .dropdown-content li {
-      padding: 4px 14px;
-      white-space: nowrap;
-    }
-
-    .dropdown-content li a {
-      display: block;
-      color: var(--text-muted);
-    }
-
-    .dropdown-content li a:hover {
-      color: var(--accent);
-      background: rgba(255, 255, 255, 0.06);
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-    /* ================= MAIN ================= */
-
-    main{
-      padding-top: var(--hdr-h);
-    }
 
     /* ================= PROJECT LAYOUT ================= */
 
     .project-layout{
-      background: var(--panel);
+      background: #0a0c11;
       padding: 90px 22px 140px;
     }
 
     .project-wrapper{
-      max-width: var(--max);
+      max-width: var(--max-width);
       margin: 0 auto;
       display: flex;
       gap: 72px;
       align-items: flex-start;
+      flex-direction: row-reverse; /* texto à direita, imagem à esquerda */
     }
 
     /* TEXTO */
-
     .project-text{
-      flex: 0 0 55%;
+      flex: 0 0 58%; /* ligeiro aumento para alinhar número de linhas */
       font-size: 14px;
-      color: var(--text);
+      line-height: 1.62; /* igual ao projeto anterior */
+      color: var(--text-main);
     }
 
     .project-header h1{
@@ -168,7 +122,7 @@
       font-weight: 400;
       letter-spacing: .02em;
       text-transform: none;
-      color: var(--muted);
+      color: var(--text-muted);
     }
 
     .project-meta{
@@ -176,7 +130,7 @@
       gap: 6px;
       font-size: 12.2px;
       letter-spacing: .05em;
-      color: var(--muted2);
+      color: var(--text-muted);
       margin-bottom: 48px;
     }
 
@@ -195,7 +149,7 @@
       letter-spacing: .08em;
       text-transform: uppercase;
       margin-bottom: 8px;
-      color: var(--muted);
+      color: var(--text-muted);
     }
 
     .synopsis{
@@ -207,9 +161,8 @@
     }
 
     /* IMAGEM */
-
     .project-image{
-      flex: 0 0 45%;
+      flex: 0 0 42%; /* ligeira redução para o texto caber melhor */
     }
 
     .project-image img{
@@ -219,8 +172,7 @@
       border-radius: 2px;
     }
 
-    /* ================= RESPONSIVE ================= */
-
+    /* RESPONSIVE */
     @media (max-width: 900px){
       .project-wrapper{
         flex-direction: column;
@@ -232,7 +184,6 @@
         flex: 1 1 100%;
       }
     }
-
   </style>
 </head>
 
