--- a/research-preservation.html
+++ b/research-preservation.html
@@ -95,7 +95,7 @@
       margin: 0 auto;
       display: flex;
       gap: 72px;
-      align-items: flex-start;
+      align-items: flex-end;
       flex-direction: row-reverse; /* texto à direita, imagem à esquerda */
     }
 
