--- a/research-preservation.html
+++ b/research-preservation.html
@@ -105,6 +105,8 @@
       font-size: 14px;
       line-height: 1.62; /* igual ao projeto anterior */
       color: var(--text-main);
+      display: flex;
+      align-items: flex-end;
     }
 
     .project-header h1{
