--- a/artistic-works.html
+++ b/artistic-works.html
@@ -202,9 +202,14 @@
       margin-top: 12px;
     }
 
-    .project-block{
-      margin-bottom: 30px;
-    }
+/* foto */
+.about-photo{
+  width:220px;
+  height:220px;
+  object-fit:none;
+
+  opacity:.92;
+}
 
     .project-block strong{
       display: block;
