--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@ html lang="en">
   margin:0 0 32px;
   color:var(--muted);
   text-transform:uppercase;
-  margin-top: 0;
+  margin-top: 10px;
 }
 
 .about-text-col p{
