--- a/artistic-works.html
+++ b/artistic-works.html
@@ -142,6 +142,8 @@
       max-width: 1120px;
       margin: 0 auto;
       padding: 0 22px;
+      display: flex;
+      gap: 20px; /* espaçamento entre texto e vídeo */
     }
 
     .project-layout {
@@ -167,6 +169,7 @@
       justify-content: flex-start;
       flex: 0 0 55%;
       margin: 0;
+      flex: 1; /* ocupa espaço restante */
     }
 
     .project-header h1{
@@ -201,7 +204,24 @@
     .project-meta .year{
       margin-top: 12px;
     }
+ /* Vimeo video responsivo */
+    .video-fixed {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%;
+      margin: 26px 0;
+      border-radius: 6px;
+      overflow: hidden;
+      flex: 1; /* ocupa espaço restante, pode ajustar */
+    }
 
+    .video-fixed iframe {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
 /* foto */
 .about-photo{
   width:220px;
@@ -348,6 +368,13 @@
       </div>
 
     </div>
+          <div class="video-fixed">
+        <iframe
+          src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
+          allow="autoplay; fullscreen; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </div>
 
     <!-- COLUNA IMAGEM -->
     <div class="project-image">
