--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -14,22 +14,103 @@
       margin:0;background: url('Timeline2.gif.gif') center/cover fixed no-repeat;
       color:var(--text);font-family:"Source Serif 4",serif;-webkit-font-smoothing:antialiased
     }
-    /* HEADER */
-    header{position:fixed;inset:0 0 auto 0;height:68px;background:rgba(5,6,8,.8);backdrop-filter:blur(6px);z-index:1000}
-    nav{max-width:var(--max);margin:0 auto;height:100%;padding:0 20px;display:flex;align-items:center;justify-content:space-between}
-    .brand{font-family:"Bebas Kai";letter-spacing:.12em;font-size:1.1rem;color:var(--text);text-decoration:none}
-    .menu{list-style:none;margin:0;padding:0;display:flex;gap:22px;align-items:center;font-size:.92rem;color:var(--muted)}
-    .menu a{color:inherit;text-decoration:none;position:relative;padding-bottom:2px;white-space:nowrap}
-    .menu a:hover{color:var(--accent)}
-    .menu a::after{content:"";position:absolute;left:0;bottom:0;width:0;height:1px;background:var(--accent);transition:width .2s}
-    .menu a:hover::after{width:100%}
-    .dropdown{position:relative}
-    .dropdown-content{display:none;position:absolute;top:26px;left:0;min-width:220px;background:rgba(5,6,8,.97);border:1px solid rgba(255,255,255,.1);list-style:none;padding:8px 0;z-index:999}
-    .dropdown:hover .dropdown-content{display:block}
-    .dropdown-content li{padding:4px 14px}
-    .dropdown-content a{display:block;color:var(--muted)}
-    .dropdown-content a:hover{color:var(--accent);background:rgba(255,255,255,.06)}
-    .caret{font-size:.85em;opacity:.6;margin-left:4px}
+   header, main{ position: relative; z-index: 1; }
+
+    /* ===== header minimal ===== */
+    header{
+      position: fixed;
+      inset: 0 0 auto 0;
+      height: var(--hdr-h);
+      z-index: 1000;
+      background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.35));
+      border-bottom: 1px solid rgba(255,255,255,.08);
+      backdrop-filter: blur(10px);
+    }
+    nav{
+      max-width: var(--max);
+      margin:0 auto;
+      height:100%;
+      padding:0 22px;
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 16px;
+    }
+  .brand{
+  font-family:"Bebas Kai", system-ui, sans-serif;
+  letter-spacing:.18em;
+  white-space: nowrap;
+
+  color: var(--muted);        /* 👈 fixa a cor */
+  text-decoration: none;     /* 👈 remove sublinhado */
+  opacity: .9;
+}
+
+.brand:hover{
+  color: var(--text);        /* igual ao menu */
+  opacity: 1;
+}
+
+    .menu{
+      list-style:none;
+      color: var(--muted);
+      display:flex;
+      gap: 14px;
+      margin:0;
+      padding:0;
+      font-size:.94rem;
+      color: var(--muted);
+    }
+    .menu a{
+      text-decoration:none;
+      color: inherit;
+      opacity:.9;
+      white-space: nowrap;
+    }
+    .menu a:hover{ opacity:1; color: var(--text); }
+
+    main{ padding-top: var(--hdr-h); }
+    /* Dropdowns */
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown > a::after {
+      content: " ▾";
+      font-size: 0.7em; /* seta mais discreta */
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 26px;
+      left: 0;
+      min-width: 220px;
+      background: rgba(5, 6, 8, 0.97);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 10px 0;
+      list-style: none;
+      z-index: 999;
+    }
+
+    .dropdown-content li {
+      padding: 4px 14px;
+      white-space: nowrap;
+    }
+
+    .dropdown-content li a {
+      display: block;
+      color: var(--text-muted);
+    }
+
+    .dropdown-content li a:hover {
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.06);
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
     /* HERO */
     .hero{padding:150px 20px 28px;text-align:center}
     .hero h1{font-family:"Bebas Kai";font-size:3.1rem;letter-spacing:.12em;margin:0 0 .3rem}
