--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@ html lang="en">
     /* ===== about section ===== */
   .about{
   background:#0a0c11;
-  padding:0px 22px 140px;
+  padding:0;
 }
 
 .about-inner{
