--- a/about.html
+++ b/about.html
@@ -150,6 +150,7 @@ html lang="en">
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: center;
   gap: 40px;
+  padding:0px 0px 140px;;
 }
 
 /* =======================
