--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -14,6 +14,7 @@
       margin:0;background: url('Timeline2.gif.gif') center/cover fixed no-repeat;
       color:var(--text);font-family:"Source Serif 4",serif;-webkit-font-smoothing:antialiased
     }
+
    header, main{ position: relative; z-index: 1; }
 
     /* ===== header minimal ===== */
@@ -112,17 +113,15 @@
       display: block;
     }
     /* HERO */
-    .hero{padding:150px 20px 28px;text-align:center}
+    .hero{ background:#0a0c11;
+       padding:0;
+      text-align:center
+    }
     .hero h1{font-family:"Bebas Kai";font-size:3.1rem;letter-spacing:.12em;margin:0 0 .3rem}
     .hero p{color:var(--muted);margin:.2rem 0 0}
     @media (max-width:600px){.hero h1{font-size:2.6rem;letter-spacing:.1em}}
-    /* CONTENT */
-    .wrap{max-width:var(--max);margin:0 auto;padding:0 20px 60px}
-    .card{background:rgba(8,10,14,.32);border:1px solid rgba(255,255,255,.08);backdrop-filter:blur(2px);
-      border-radius:10px;padding:18px 18px 16px;margin:18px 0}
-    .card h2{font-family:"Bebas Kai";letter-spacing:.1em;font-size:1.5rem;margin:.1rem 0 .4rem;color:var(--accent)}
-    .card p, .card li{color:var(--muted);line-height:1.7;font-size:1.02rem}
-    ul{margin:.4rem 0 .2rem 1.1rem}
+
+  
   </style>
 </head>
 <body>
