--- a/artistic-works.html
+++ b/artistic-works.html
@@ -153,8 +153,8 @@
 
     .project-wrapper {
       display: flex;
-      gap: 60px;
-      align-items: flex-start;
+      flex-wrap: wrap;
+     gap: 60px;
     }
 
     .project-text{
@@ -216,11 +216,11 @@
     }
 
     .video-fixed iframe {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
+     position: relative;
+     flex: 0 0 45%; /* ocupa 45% do container */
+      padding-bottom: 56.25%; /* mantém proporção 16:9 */
+     border-radius: 6px;
+      overflow: hidden;
     }
 /* foto */
 .about-photo{
