--- a/about.html
+++ b/about.html
@@ -141,6 +141,7 @@ html lang="en">
   .about{
   background:#0a0c11;
   padding:0;
+  margin-top: -32px; /* puxa 32px para cima */
 }
 
 .about-inner{
