--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ html lang="en">
       z-index:0;
     }
 
-    header, main{ position: relative; z-index: 1; padding-top: 32px; /* metade da altura do header */ }
+    header, main{ position: relative; z-index: 1; padding-top: calc(var(--hdr-h) / 2); /* reduz espaço acima do conteúdo */ }
 
    /* ===== header minimal ===== */
     header{
