--- a/about.html
+++ b/about.html
@@ -283,8 +283,8 @@ html lang="en">
 ======================= */
 
 .about-associations{
-  margin-top: 96px; /* respiração clara em relação ao texto */
-  text-align: center;
+  margin-top: 20px; /* respiração clara em relação ao texto */
+  text-align: flex-start;
 }
 
 .about-section-title{
