--- a/about.html
+++ b/about.html
@@ -284,7 +284,7 @@ html lang="en">
 
 .about-associations{
   margin-top: 20px; /* respiração clara em relação ao texto */
-  text-align: flex-start;
+  text-align: center;
 }
 
 .about-section-title{
