--- a/artistic-works.html
+++ b/artistic-works.html
@@ -153,8 +153,9 @@
 
     .project-wrapper {
       display: flex;
-      flex-wrap: wrap;
-     gap: 60px;
+  flex-wrap: wrap;
+  gap: 60px;
+  align-items: flex-start; /* alinha topo do texto e vídeo */
     }
 
     .project-text{
@@ -206,21 +207,21 @@
     }
  /* Vimeo video responsivo */
     .video-fixed {
-      position: relative;
-      width: 100%;
-      padding-bottom: 56.25%;
-      margin: 26px 0;
-      border-radius: 6px;
-      overflow: hidden;
-      flex: 1; /* ocupa espaço restante, pode ajustar */
+      flex: 0 0 40%; /* vídeo ocupa 40% ao lado do texto */
+  position: relative;
+  padding-bottom: 56.25%; /* proporção 16:9 */
+  height: 0;
+  overflow: hidden;
+  border-radius: 6px;
     }
 
     .video-fixed iframe {
-     position: relative;
-     flex: 0 0 45%; /* ocupa 45% do container */
-      padding-bottom: 56.25%; /* mantém proporção 16:9 */
-     border-radius: 6px;
-      overflow: hidden;
+     position: absolute;
+     top: 0;
+      left: 0;
+     width: 100%;
+     height: 100%;
+      border: 0;
     }
 /* foto */
 .about-photo{
