--- a/artistic-works.html
+++ b/artistic-works.html
@@ -153,9 +153,9 @@
 
     .project-wrapper {
       display: flex;
-     flex-wrap: wrap;
-     gap: 40px;
-    align-items: flex-start; /* alinha topo do texto e vídeo */
+       flex-wrap: wrap;
+       gap: 60px;
+       align-items: flex-start;
     }
 
     .project-text{
@@ -207,9 +207,9 @@
     }
  /* Vimeo video responsivo */
     .video-fixed {
-      flex: 0 0 40%; /* vídeo ocupa 40% ao lado do texto */
+      flex: 0 0 40%; /* vídeo ocupa 40% */
   position: relative;
-  padding-bottom: 56.25%; /* proporção 16:9 */
+  padding-bottom: 56.25%; /* 16:9 */
   height: 0;
   overflow: hidden;
   border-radius: 6px;
@@ -217,11 +217,11 @@
 
     .video-fixed iframe {
      position: absolute;
-     top: 0;
-      left: 0;
-     width: 100%;
-     height: 100%;
-      border: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
     }
 /* foto */
 .about-photo{
@@ -368,14 +368,13 @@
         </p>
       </div>
 
-    </div>
-          <div class="video-fixed">
-        <iframe
-          src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
-          allow="autoplay; fullscreen; picture-in-picture"
-          allowfullscreen>
-        </iframe>
-      </div>
+   <div class="video-fixed">
+  <iframe
+    src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
+    allow="autoplay; fullscreen; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
 
     <!-- COLUNA IMAGEM -->
     <div class="project-image">
