--- a/artistic-works.html
+++ b/artistic-works.html
@@ -301,87 +301,78 @@
       </nav>
     </header>
 
-  <main>
+ <main>
 <section class="project-layout">
-  <div class="project-wrapper container">
+<div class="project-wrapper container">
 
-    <!-- COLUNA TEXTO -->
-    <div class="project-text">
-      <div class="project-header">
-        <h1>
-          Send me a color
-          <span>Mechanical Gestures to Preserve Flowers:<br>
-                An essay on color reproduction using contact duplication systems</span>
-        </h1>
 
-        <div class="project-meta">
-          <span>Film performance| research project</span>
-          <span>16mm film | 12min</span>
-          <span class="year">2024</span>
-        </div>
-      </div>
-
-      <div class="project-block">
-        <p><strong>Director</strong><br>
-        Mariana Torres</p>
-
-        <p><strong>Países de producción</strong><br>
-        Portugal| Spain</p>
-
-        <p><strong></strong> | Archive | Color</p>
-       </div>
-
-      <div class="project-block">
-        <p><strong>Con el apoyo de</strong></p>
-        <p>
-          Elías Querejeta Zine Eskola (País Vasco)<br>
-          2Deo laboratorio centro cultural Tabakalera (País Vasco)<br>
-          Casa Estrela Association (Portugal)<br>
-        </p>
-      </div>
-
-      <div class="project-block">
-        <p><strong>C</strong></p>
-        <p>
-          Production: Elias Querjeta Zine Eskola<br>
-          Cinematographer: Helena Estrela<br>
-          development and duplication: Mariana Torres<br>
-          Sound Design: Catalina Giordani & Veronica Boggio<br>
-          Projectionists: Lorena Garcia | Matias Fajn | Inés Vasquez<br>
-
-          Photoquimical Laboratory: Elias Querjeta Zine Eskola <br>
-        </p>
-      </div>
-
-      <div class="project-block synopsis">
-        <p><strong>Sinopsis</strong></p>
-        <p>
-          <em>It is a filmic performance that explores the mechanical 
-            gestures of 16mm projectors to reveal light as a material origin
-           and color as an empirical exploration of vision, through a process
-           of duplication in analog film that employs an old color technique
-           from 1861 by Marxwell, called the chromatic separation technique.
-           On the screen, thousands of chromatic possibilities unfold through filters
-           and crystals, exploring the refraction and reflection of light in delicate 
-          flashes of melancholy. The images are flowers, where color generates new flowers,
-         and where color itself acquires movement and will.
-        </p>
-      </div>
-
-   <div class="video-fixed">
-  <iframe
-    src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
-    allow="autoplay; fullscreen; picture-in-picture"
-    allowfullscreen>
-  </iframe>
+<!-- COLUNA TEXTO -->
+<div class="project-text">
+<div class="project-header">
+<h1>
+Send me a color
+<span>Mechanical Gestures to Preserve Flowers:<br>An essay on color reproduction using contact duplication systems</span>
+</h1>
+<div class="project-meta">
+<span>Film performance| research project</span>
+<span>16mm film | 12min</span>
+<span class="year">2024</span>
+</div>
 </div>
 
-    <!-- COLUNA IMAGEM -->
-    <div class="project-image">
-      <img src="img/projeto.jpg" alt="">
-    </div>
 
-  </div>
+<div class="project-block">
+<p><strong>Director</strong><br>Mariana Torres</p>
+<p><strong>Países de producción</strong><br>Portugal| Spain</p>
+<p><strong></strong> | Archive | Color</p>
+</div>
+
+
+<div class="project-block">
+<p><strong>Con el apoyo de</strong></p>
+<p>
+Elías Querejeta Zine Eskola (País Vasco)<br>
+2Deo laboratorio centro cultural Tabakalera (País Vasco)<br>
+Casa Estrela Association (Portugal)<br>
+</p>
+</div>
+
+
+<div class="project-block">
+<p><strong>C</strong></p>
+<p>
+Production: Elias Querjeta Zine Eskola<br>
+Cinematographer: Helena Estrela<br>
+development and duplication: Mariana Torres<br>
+Sound Design: Catalina Giordani & Veronica Boggio<br>
+Projectionists: Lorena Garcia | Matias Fajn | Inés Vasquez<br>
+Photoquimical Laboratory: Elias Querjeta Zine Eskola <br>
+</p>
+</div>
+
+
+<div class="project-block synopsis">
+<p><strong>Sinopsis</strong></p>
+<p>
+<em>It is a filmic performance that explores the mechanical gestures of 16mm projectors to reveal light as a material origin and color as an empirical exploration of vision, through a process of duplication in analog film that employs an old color technique from 1861 by Marxwell, called the chromatic separation technique. On the screen, thousands of chromatic possibilities unfold through filters and crystals, exploring the refraction and reflection of light in delicate flashes of melancholy. The images are flowers, where color generates new flowers, and where color itself acquires movement and will.</em>
+</p>
+</div>
+</div>
+
+
+<!-- COLUNA VÍDEO -->
+<div class="video-fixed">
+<iframe src="https://player.vimeo.com/video/1081106970?h=70594f4e3f" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+
+<!-- COLUNA IMAGEM -->
+<div class="project-image">
+<img src="img/projeto.jpg" alt="">
+</div>
+
+
+</div>
 </section>
 </main>
 </body>
