--- a/artistic-works.html
+++ b/artistic-works.html
@@ -212,6 +212,7 @@
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
   overflow: hidden;
+  border-radius: 6px;
     }
 
     .video-fixed iframe {
