--- a/artistic-works.html
+++ b/artistic-works.html
@@ -225,8 +225,8 @@
 
     .video-fixed iframe {
       position: absolute;
-      top: 10px;
-      left: 20px;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       border: 0;
