--- a/artistic-works.html
+++ b/artistic-works.html
@@ -218,6 +218,7 @@
       position: absolute;
       top: 120px;  /* ajuste vertical */
       left: 0px; /* ajuste horizontal */
+      right: 40px; 
       width: 50%;  /* largura do vídeo */
       padding-bottom: 36.56%; /* mantém proporção 16:9 */
       border-radius: 6px;
