--- a/artistic-works.html
+++ b/artistic-works.html
@@ -151,7 +151,7 @@
 
     .project-wrapper {
       display: flex;
-      gap: 0; /* espaço mínimo quase zero entre texto e vídeo */
+      gap: 20px; /* espaço mínimo quase zero entre texto e vídeo */
       align-items: flex-start;
     }
 
