--- a/artistic-works.html
+++ b/artistic-works.html
@@ -215,7 +215,7 @@
 
     /* VÍDEO RESPONSIVO */
     .video-fixed {
-      position: absolute;
+      position: relative;
       top: 120px;  /* ajuste vertical */
       left: -40px; /* ajuste horizontal */ 
       width: 50%;  /* largura do vídeo */
