--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@ html lang="en">
   font-family:"Bebas Kai", system-ui, sans-serif;
   letter-spacing:.18em;
   font-size:2.2rem;
-  margin:10 12 32px;
+  margin:10px 12px 32px;
   color:var(--muted);
   text-transform:uppercase;
   margin-top: 20px;
