--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@ html lang="en">
   font-size:1.02rem;
   line-height:1.6;
   color:var(--muted);
-  margin:0 0 22px;
+  margin:-60px 0 22px;
 }
 
 /* =======================
