--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@ html lang="en">
   max-width: 920px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: center;
-  gap: 40px;
+  gap: 20px;
   padding: 10px 10px 120px;;
 }
 
@@ -158,17 +158,16 @@ html lang="en">
 ======================= */
 
 .about-text-col{
-  flex:1;
-  max-width:620px;
-  order: 2;
-  align-items: flex-start
+  margin-top: 20px;
+  margin-bottom: 32px;
 }
 
 .about-text-col h2{
   font-family:"Bebas Kai", system-ui, sans-serif;
   letter-spacing:.18em;
   font-size:2.2rem;
-  margin: -60px 0 32px;
+  margin-top: 20px;   /* desce o título */
+  margin-bottom: 32px;
   color:var(--muted);
   text-transform:uppercase;
 }
@@ -177,7 +176,7 @@ html lang="en">
   font-size:1.02rem;
   line-height:1.6;
   color:var(--muted);
-  margin:-60px 0 22px;
+  margin: 0 0 22px;
 }
 
 /* =======================
