--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@ html lang="en">
 }
 
 .about-inner{
-  display: flex-start;
+  display: flex;
   flex-direction: row;
   max-width: 920px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
@@ -158,7 +158,7 @@ html lang="en">
 ======================= */
 
 .about-text-col{
-  margin-top: 50px;
+  margin-top: 40px;
   margin-bottom: 32px;
 }
 
@@ -166,7 +166,7 @@ html lang="en">
   font-family:"Bebas Kai", system-ui, sans-serif;
   letter-spacing:.18em;
   font-size:2.2rem;
-  margin-top: 30px;   /* desce o título */
+  margin-top: 20px;   /* desce o título */
   margin-bottom: 32px;
   color:var(--muted);
   text-transform:uppercase;
