--- a/artistic-works.html
+++ b/artistic-works.html
@@ -153,6 +153,7 @@
       display: flex;
       gap: 20px; /* espaço mínimo quase zero entre texto e vídeo */
       align-items: flex-start;
+      flex-wrap: wrap;
     }
 
     .project-text {
