--- a/artistic-works.html
+++ b/artistic-works.html
@@ -209,8 +209,8 @@
     .synopsis p{ max-width: 34ch; }
 
     .project-image{
-      flex: 0 0 100%;
-      margin-top: 40px;
+      width: 100%;
+
     }
     .project-image img{ width: 100%; height: auto; display: block; }
 
