--- a/artistic-works.html
+++ b/artistic-works.html
@@ -153,7 +153,7 @@
       display: flex;
       gap: 20px; /* espaço mínimo quase zero entre texto e vídeo */
       align-items: flex-start;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
     }
 
     .project-text {
@@ -210,15 +210,16 @@
 
     .project-image{
       width: 100%;
+  margin-top: 60px;
 
     }
     .project-image img{ width: 100%; height: auto; display: block; }
 
     /* VÍDEO RESPONSIVO */
     .video-fixed {
-       position: relative; /* deixa fluir no flex */
-  width: 45%;         /* largura do vídeo */
-  aspect-ratio: 16/9; /* mantém proporção */
+      flex: 0 0 45%;
+  position: relative;
+  aspect-ratio: 16 / 9;
   border-radius: 6px;
   overflow: hidden;
     }
