--- a/artistic-works.html
+++ b/artistic-works.html
@@ -164,7 +164,7 @@
       letter-spacing: .015em;
       display: flex;
       flex-direction: column;
-      flex: 0 0 55%;
+      flex: 1;
     }
 
     .project-header h1{
@@ -217,7 +217,6 @@
 
     /* VÍDEO RESPONSIVO */
     .video-fixed {
-      flex: 0 0 45%;
   position: relative;
   aspect-ratio: 16 / 9;
   border-radius: 6px;
