--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@ html lang="en">
   display: flex;
   flex-direction: row;
   max-width: 920px;   /* mesmo max-width do hero */
-  margin: 8px auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
+  margin: 8px;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: center;
   gap: 20px;
   padding: 10px 10px 40px;;
