--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@ html lang="en">
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: center;
   gap: 30px;
-  padding: 10px 10px 40px;;
+  padding: 10px 10px 40px;
 }
 
 /* =======================
