--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ html lang="en">
       z-index:0;
     }
 
-    header, main{ position: relative; z-index: 1; ); }
+    header, main{ position: relative; z-index: 1; }
     /* ===== header minimal ===== */
     header{
       position: fixed;
