--- a/about.html
+++ b/about.html
@@ -553,7 +553,7 @@ html lang="en">
    <div class="presentation-photos">
 
   <figure class="presentation-item">
-    <img src="presenting1.jpg" alt="Conference presentation at FIAF Symposium, Paris">
+    <img src="about materials/4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at FIAF Symposium, Paris">
     <figcaption>FIAF Symposium, Paris — conference presentation</figcaption>
   </figure>
 
