--- a/about.html
+++ b/about.html
@@ -397,11 +397,15 @@ html lang="en">
   opacity:.9;
   filter: contrast(1.05) saturate(.9);
   transition: opacity .3s ease, transform .3s ease;
+  cursor: zoom-in;
 }
 
 .presentation-photos img:hover{
   opacity:1;
   transform: scale(1.02);
+}
+.lightbox img{
+  cursor: zoom-out;
 }
 
   </style>
@@ -552,22 +556,25 @@ html lang="en">
 
    <div class="presentation-photos">
 
-  <figure class="presentation-item">
+   <figure class="presentation-item">
     <img src="about materials/4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at FIAF Symposium, Paris">
     <figcaption>FIAF Symposium, Paris — conference presentation</figcaption>
-  </figure>
+   </figure>
 
-  <figure class="presentation-item">
+   <figure class="presentation-item">
     <img src="presenting2.jpg" alt="Panel discussion at audiovisual archiving conference">
     <figcaption>Panel discussion on audiovisual archiving</figcaption>
-  </figure>
+   </figure>
 
-  <figure class="presentation-item">
+   <figure class="presentation-item">
     <img src="presenting3.jpg" alt="Lecture moment during academic conference">
     <figcaption>Lecture session — research presentation</figcaption>
-  </figure>
+   </figure>
 
-</div>
+   <div class="lightbox" id="lightbox">
+   <img id="lightbox-img" src="" alt="">
+  
+  </div>
 
   </div>
 </section>
