--- a/about.html
+++ b/about.html
@@ -384,25 +384,47 @@ html lang="en">
 ======================= */
 
 .presentation-photos{
-  display:grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  gap: 6px;
+   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 14px;
 }
-
+.presentation-item figcaption{
+  font-size: .85rem;
+  color: #555;
+  margin-top: 4px;
+  line-height: 1.3;
+}
 .presentation-photos img{
-  width:100%;
-  aspect-ratio: 16/9;
+ width: 100%;
+  aspect-ratio: 16 / 9;
   object-fit: cover;
-  border-radius: 2px;
-  opacity:.9;
-  filter: contrast(1.05) saturate(.9);
-  transition: opacity .3s ease, transform .3s ease;
+  border-radius: 3px;
+  opacity: .95;
+  filter: contrast(1.03) saturate(.95);
+  transition: transform .3s ease, opacity .3s ease;
   cursor: zoom-in;
 }
 
 .presentation-photos img:hover{
-  opacity:1;
-  transform: scale(1.02);
+  transform: scale(1.015);
+  opacity: 1;
+}
+.lightbox{
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,.85);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .3s ease;
+  z-index: 999;
+}
+
+.lightbox.active{
+  opacity: 1;
+  pointer-events: all;
 }
 .lightbox img{
   cursor: zoom-out;
