--- a/about.html
+++ b/about.html
@@ -580,7 +580,7 @@ html lang="en">
 
    <figure class="presentation-item">
     <img src="about materials/4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at FIAF Symposium, Paris">
-    <figcaption>FIAF Symposium, Paris — conference presentation</figcaption>
+    <figcaption>Eye International Conference 2025- Panel </figcaption>
    </figure>
 
    <figure class="presentation-item">
