--- a/about.html
+++ b/about.html
@@ -378,6 +378,17 @@ html lang="en">
   line-height:1.5;
   color:var(--muted);
 }
+.desc{
+  color: inherit;
+}
+
+li a{
+  text-decoration: none;
+}
+
+li a:hover .desc{
+  text-decoration: underline;
+}
 
 /* =======================
    PRESENTATION PHOTOS
@@ -562,10 +573,14 @@ html lang="en">
 
     <ul class="grants-list">
       <li>
-        <span class="year">2024</span>
-        <span class="desc">Conference Presentation — FIAF Symposium, Paris</span>
+        <a href="https://TEU-LINK-AQUI.com" 
+         target="_blank" 
+          rel="noopener noreferrer">
+            <span class="desc">
+             Conference Presentation — FIAF Symposium, Paris
+         </span>
+          </a>
       </li>
-      <li>
         <span class="year">2023</span>
         <span class="desc">AMIA George Blood LP Women in Audiovisual Archiving and Technology Scholarship</span>
       </li>
