--- a/about.html
+++ b/about.html
@@ -377,6 +377,10 @@ html lang="en">
   font-size:.95rem;
   line-height:1.5;
   color:var(--muted);
+/* =======================
+   Hiperlink conferences
+======================= */
+
 }
 .desc{
   color: inherit;
