--- a/about.html
+++ b/about.html
@@ -577,11 +577,11 @@ li a:hover .desc{
 
     <ul class="grants-list">
       <li>
-        <a href="https://TEU-LINK-AQUI.com" 
+        <a href="https://assets.eyefilm.nl/downloads/blocks/Eye-International-Conference-2025-booklet.pdf#page=8" 
          target="_blank" 
           rel="noopener noreferrer">
             <span class="desc">
-             Conference Presentation — FIAF Symposium, Paris
+             Eye International Conference 2025- Panel Experimental Colour Practices
          </span>
           </a>
       </li>
@@ -599,7 +599,7 @@ li a:hover .desc{
 
    <figure class="presentation-item">
     <img src="about materials/4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at FIAF Symposium, Paris">
-    <figcaption>Eye International Conference 2025- Panel </figcaption>
+    <figcaption>Eye International Conference 2025- Panel Experimental Colour Practices </figcaption>
    </figure>
 
    <figure class="presentation-item">
