--- a/about.html
+++ b/about.html
@@ -577,6 +577,7 @@ li a:hover .desc{
 
     <ul class="grants-list">
       <li>
+        <span class="year">2025</span>
         <a href="https://assets.eyefilm.nl/downloads/blocks/Eye-International-Conference-2025-booklet.pdf#page=8" 
          target="_blank" 
           rel="noopener noreferrer">
