--- a/about.html
+++ b/about.html
@@ -378,7 +378,7 @@ html lang="en">
   line-height:1.5;
   color:var(--muted);
 /* =======================
-   Hiperlink conferences
+   PRESENTATION PHOTOS
 ======================= */
 
 }
@@ -577,12 +577,11 @@ li a:hover .desc{
 
     <ul class="grants-list">
       <li>
-        <span class="year">2025</span>
-        <a href="https://assets.eyefilm.nl/downloads/blocks/Eye-International-Conference-2025-booklet.pdf#page=8" 
+        <a href="https://TEU-LINK-AQUI.com" 
          target="_blank" 
           rel="noopener noreferrer">
             <span class="desc">
-             Eye International Conference 2025- Panel Experimental Colour Practices
+             Conference Presentation — FIAF Symposium, Paris
          </span>
           </a>
       </li>
@@ -600,7 +599,7 @@ li a:hover .desc{
 
    <figure class="presentation-item">
     <img src="about materials/4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at FIAF Symposium, Paris">
-    <figcaption>Eye International Conference 2025- Panel Experimental Colour Practices </figcaption>
+    <figcaption>Eye International Conference 2025- Panel </figcaption>
    </figure>
 
    <figure class="presentation-item">
